--- a/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -333,7 +333,7 @@
             }}
           </div>
         </div>
-        
+
       </mat-card-content>
 
       <mat-card-content class="contentStyle mat-elevation-z8">
@@ -1255,7 +1255,7 @@
           </div>
         </div>
         <hr />
-        <div class="row info-detail" *ngIf="(formCreationService.occupantsForm$ | async)?.value?.fullTimeOccupants?.length > 0">
+        <div class="row info-detail" *ngIf="(formCreationService.fullTimeOccupantsForm$ | async)?.value?.fullTimeOccupants?.length > 0">
           <b>Full Time Occupants</b>
           <table mat-table [dataSource]="fullTimeOccupantsDataSource">
             <!-- Name Column -->
@@ -1286,10 +1286,10 @@
             ></tr>
           </table>
         </div>
-        <div class="row info-detail" *ngIf="(formCreationService.occupantsForm$ | async)?.value?.fullTimeOccupants?.length == 0">
+        <div class="row info-detail" *ngIf="(formCreationService.fullTimeOccupantsForm$ | async)?.value?.fullTimeOccupants?.length == 0">
           <span style="color:red">At least one full time occupant is required.</span>
         </div>
-        <div class="row info-detail" *ngIf="(formCreationService.occupantsForm$ | async)?.value?.secondaryApplicants?.length > 0">
+        <div class="row info-detail" *ngIf="(formCreationService.secondaryApplicantsForm$ | async)?.value?.secondaryApplicants?.length > 0">
           <b>Secondary Applicants</b>
           <table mat-table [dataSource]="secondaryApplicantsDataSource">
             <!-- Applicant Type Column -->
@@ -1340,10 +1340,10 @@
             ></tr>
           </table>
         </div>
-        <div class="row info-detail" *ngIf="(formCreationService.occupantsForm$ | async)?.value?.secondaryApplicants?.length == 0">
+        <div class="row info-detail" *ngIf="(formCreationService.secondaryApplicantsForm$ | async)?.value?.secondaryApplicants?.length == 0">
           <span>No secondary applicants.</span>
         </div>
-        <div class="row info-detail" *ngIf="(formCreationService.occupantsForm$ | async)?.value?.otherContacts?.length > 0">
+        <div class="row info-detail" *ngIf="(formCreationService.otherContactsForm$ | async)?.value?.otherContacts?.length > 0">
           <b>Other Contacts</b>
           <table mat-table [dataSource]="otherContactsDataSource">
             <!-- Name Column -->
@@ -1384,7 +1384,7 @@
             ></tr>
           </table>
         </div>
-        <div class="row info-detail" *ngIf="(formCreationService.occupantsForm$ | async)?.value?.otherContacts?.length == 0">
+        <div class="row info-detail" *ngIf="(formCreationService.otherContactsForm$ | async)?.value?.otherContacts?.length == 0">
           <span style="color:red">At least one other contact is required.</span>
         </div>
       </mat-card-content>
@@ -1409,7 +1409,7 @@
           </div>
         </div>
         <hr />
-        <div class="row info-detail" *ngIf="(formCreationService.cleanUpLogForm$ | async)?.value?.cleanuplogs?.length > 0">
+        <div class="row info-detail" *ngIf="(formCreationService.cleanUpLogItemsForm$ | async)?.value?.cleanuplogs?.length > 0">
           <b>Clean Up Log</b>
           <table mat-table [dataSource]="cleanUpWorkDataSource">
             <!-- Date Column -->
@@ -1459,10 +1459,10 @@
             ></tr>
           </table>
         </div>
-        <div class="row info-detail" *ngIf="(formCreationService.cleanUpLogForm$ | async)?.value?.cleanuplogs?.length == 0">
+        <div class="row info-detail" *ngIf="(formCreationService.cleanUpLogItemsForm$ | async)?.value?.cleanuplogs?.length == 0">
           <span>No clean up logs.</span>
         </div>
-        <div class="row info-detail" *ngIf="(formCreationService.cleanUpLogForm$ | async)?.value?.cleanuplogFiles?.length > 0">
+        <div class="row info-detail" *ngIf="cleanUpWorkFileDataSource?.data?.length > 0">
           <b>Receipts and Invoices</b>
           <table mat-table [dataSource]="cleanUpWorkFileDataSource">
            <!-- File Name Column -->
@@ -1502,7 +1502,7 @@
             ></tr>
           </table>
         </div>
-        <div class="row info-detail" *ngIf="(formCreationService.cleanUpLogForm$ | async)?.value?.cleanuplogFiles?.length == 0">
+        <div class="row info-detail" *ngIf="cleanUpWorkFileDataSource?.data?.length == 0">
           <span>No receipts or invoices supplied.</span>
         </div>
       </mat-card-content>
@@ -1527,9 +1527,9 @@
           </div>
         </div>
         <hr />
-        <div class="row info-detail" *ngIf="(formCreationService.damagedItemsByRoomForm$ | async)?.value?.damagedRooms?.length > 0">
+        <div class="row info-detail" *ngIf="(formCreationService.damagedRoomsForm$ | async)?.value?.damagedRooms?.length > 0">
           <b>Damaged Rooms</b>
-          <table mat-table [dataSource]="damagedRoomDataSource">
+          <table mat-table [dataSource]="damagedRoomsDataSource">
             <!-- Room Type Column -->
             <ng-container matColumnDef="roomType" style="width:20%">
               <th mat-header-cell *matHeaderCellDef >
@@ -1550,20 +1550,20 @@
               </td>
             </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="damagedRoomColumnsToDisplay"></tr>
+            <tr mat-header-row *matHeaderRowDef="damagedRoomsColumnsToDisplay"></tr>
             <tr
               mat-row
-              *matRowDef="let element; columns: damagedRoomColumnsToDisplay"
+              *matRowDef="let element; columns: damagedRoomsColumnsToDisplay"
               class="example-element-row"
             ></tr>
           </table>
         </div>
-        <div class="row info-detail" *ngIf="(formCreationService.damagedItemsByRoomForm$ | async)?.value?.damagedRooms?.length == 0">
+        <div class="row info-detail" *ngIf="(formCreationService.damagedRoomsForm$ | async)?.value?.damagedRooms?.length == 0">
           <span>No damaged rooms listed.</span>
         </div>
-        <div class="row info-detail" *ngIf="(formCreationService.damagedItemsByRoomForm$ | async)?.value?.damagePhotos?.length > 0">
+        <div class="row info-detail" *ngIf="damagePhotosDataSource?.data?.length > 0">
           <b>Damage Photos</b>
-          <table mat-table [dataSource]="damagePhotoDataSource">
+          <table mat-table [dataSource]="damagePhotosDataSource">
              <!-- File Name Column -->
              <ng-container matColumnDef="fileName" style="width:25%">
               <th mat-header-cell *matHeaderCellDef >
@@ -1594,15 +1594,15 @@
               </td>
             </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="damagePhotoColumnsToDisplay"></tr>
+            <tr mat-header-row *matHeaderRowDef="damagePhotosColumnsToDisplay"></tr>
             <tr
               mat-row
-              *matRowDef="let element; columns: damagePhotoColumnsToDisplay"
+              *matRowDef="let element; columns: damagePhotosColumnsToDisplay"
               class="example-element-row"
             ></tr>
           </table>
         </div>
-        <div class="row info-detail" *ngIf="(formCreationService.damagedItemsByRoomForm$ | async)?.value?.damagePhotos?.length == 0">
+        <div class="row info-detail" *ngIf="damagePhotosDataSource?.data?.length == 0">
           <span>No damage photos supplied.</span>
         </div>
       </mat-card-content>
@@ -1627,7 +1627,7 @@
           </div>
         </div>
         <hr />
-        <div class="row info-detail" *ngIf="(formCreationService.supportingDocumentsForm$ | async)?.value?.supportingDocuments?.length > 0">
+        <div class="row info-detail" *ngIf="supportingDocumentsDataSource?.data?.length > 0">
           <b>Supporting Documents & Insurance Template</b>
           <table mat-table [dataSource]="supportingDocumentDataSource">
              <!-- File Name Column -->
@@ -1678,7 +1678,7 @@
             ></tr>
           </table>
         </div>
-        <div class="row info-detail" *ngIf="(formCreationService.supportingDocumentsForm$ | async)?.value?.supportingDocuments?.length == 0">
+        <div class="row info-detail" *ngIf="supportingDocumentsDataSource?.data?.length == 0">
           <span>No supporting documents.</span>
         </div>
         <div class="row info-detail" *ngIf="(formCreationService.supportingDocumentsForm$ | async)?.hasError('noInsuranceTemplate')">
