--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
@@ -21,9 +21,9 @@
               aria-label="Select an option">
               <mat-radio-button value="0">Yes</mat-radio-button>
               <div class="row radio-extra-label">
-                {{ profileAddress.addressLine1}}<br/>
-                <div *ngIf="profileAddress.addressLine2">{{ profileAddress.addressLine2}}<br/></div>
-                {{ profileAddress.community }}&nbsp;{{ profileAddress.postalCode }}<br /><br/>
+                {{ profileAddress?.addressLine1}}<br/>
+                <div *ngIf="profileAddress?.addressLine2">{{ profileAddress?.addressLine2}}<br/></div>
+                {{ profileAddress?.community }}&nbsp;{{ profileAddress?.postalCode }}<br /><br/>
               </div>
               <mat-radio-button value="1">No</mat-radio-button>
               <div class="row radio-extra-label" *ngIf="useProfileAddress === '1'">
